--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "poo-bd",
+  "name": "POO-BD",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "sequelize": "^6.5.0"
   }
 }
